Add manpage content from https://www.winpcap.org/docs/docs_412/html/group__remote.html

--- a/rpcapd/rpcapd.manadmin.in
+++ b/rpcapd/rpcapd.manadmin.in
@@ -1,7 +1,8 @@
 .\"  rpcapd.8
 .\"
-.\"  Copyright (c) 2018
-.\"  NetGroup, Politecnico di Torino (Italy)
+.\"  Copyright (c) 2002-2005 NetGroup, Politecnico di Torino (Italy)
+.\"  Copyright (c) 2005-2009 CACE Technologies
+.\"  Copyright (c) 2018-     The TCPdump Group
 .\"  All rights reserved.
 .\" 
 .\"  Redistribution and use in source and binary forms, with or without
@@ -62,13 +63,13 @@ rpcapd
 .B \-i
 ] [
 .B \-s
-.I file
+.I config_file
 ]
 .br
 .ti +8
 [
 .B \-f
-.I file
+.I config_file
 ]
 .br
 .ad
@@ -76,6 +77,61 @@ rpcapd
 .LP
 \fIRpcapd\fP is a daemon (Unix) or service (Win32) that allows the capture
 and filter part of libpcap to be run on a remote system.
+.TP
+Rpcapd can run in two modes: Passive Mode (default) and Active Mode
+
+In passive mode, the client (e.g. a network sniffer) connects to rpcapd.
+It then sends hem the appropriate commands to start the capture.
+
+In active mode, rpcapd tries to establish a connection toward the client
+(e.g.  a network sniffer). The client then sends the appropriate commands
+to rpcapd to start the capture.
+
+Active Mode is useful in case rpcapd is run behind a firewall and
+cannot receive connections from the external world. In this case,
+rpcapd can be configured to establish the connection to a given host,
+which has to be configured in order to wait for that connection. After
+establishing the connection, the protocol continues its job in almost
+the same way in both Active and Passive Mode.
+.TP
+Configuration file
+
+The user can create a configuration file in the same folder of the
+executable, and put the configuration commands in there. In order for
+rpcapd to execute the commands, you have to restart it on Win32, i.e.
+the initialization file is parsed only at the beginning). The UNIX
+version of rpcapd will reread the configuration file when receiving a
+HUP signel. In that case, all the existing connections remain in place,
+while the new connections will be created according to the new parameters.
+.br
+In case a user does not want to create the configuration file manually,
+they can launch rpcapd with the requested parameters plus "-s filename".
+Rpcapd will parse all the parameters and save them into the specified
+configuration file.
+
+.TP
+Installing rpcapd on Win32
+
+The remote daemon is installed automatically when installing WinPcap. The installation process places the rpcapd file into the WinPcap folder. This file can be executed either from the command line, or as a service. For instance, the installation process updates the list of available services list and it creates a new item (Remote Packet Capture Protocol v.0 (experimental) ). To avoid security problems, the service is inactive and it has to be started manually (control panel - administrative tools - services - start).
+
+The service has a set of "standard" parameters, i.e. it is launched with the "-d" flag (in orde to make it running as a service) and the "-f rpcapd.ini" flag.
+
+.TP
+Starting rpcapd on Win32
+
+The rpcapd executable can be launched directly, i.e. it can run in the foreground as well (not as a daemon/service). The procedure is quite simple: you have to invoke the executable from the command line with all the requested parameters but the "-d" flag. The capture server will start in the foreground.
+.TP
+Installing rpcapd on Unix
+
+TBD
+.TP
+Starting rpcapd on Unix
+
+rpcapd needs sufficient privileges to perform packet capture, e.g.
+run as root or be owned by root and have suid set. Most operating
+systems provide more elegant solutions when run as user than the
+above solutions, all of them different.
+
 .SH OPTIONS
 .TP
 .BI \-b " address"
@@ -119,10 +175,10 @@ the service is started from the control panel
 .B \-i
 run in inetd mode (UNIX only).
 .TP
-.BI \-s " file"
+.BI \-s " config_file"
 save the current configuration to file
 .TP
-.BI \-f " file"
+.BI \-f " config_file"
 load the current configuration from file; all switches
 specified from the command line are ignored
 .TP
@@ -130,5 +186,10 @@ specified from the command line are ignored
 print this help screen
 .br
 .ad
+.SH "KNOWN BUGS"
+FreeBSD: The first time pcap_stat() is called, the function takes
+several seconds to return. Therefore, client programs seem to hang
+for up to 30 seconds at the beginning of the capture if rpcapd is
+run on FReeBSD.
 .SH "SEE ALSO"
 pcap(3PCAP)
